--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -39,9 +39,33 @@ h1, h2, h3, h4 {
     margin: 0;
 }
 
+
+
 .row-max-size {
     width: 80%;
     margin: 0 auto;
+}
+
+.button {
+    padding: 0.4em 1em;
+    color: darkgoldenrod;
+    border: 2px solid darkgoldenrod;
+    border-radius: 0.2em;
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+.button:hover {
+    background-color: yellow;
+    color: darkgoldenrod;
+    cursor: pointer;
+}
+
+.button--cta {
+    padding: 0.6em 1em;
+    background-color: gold;
+    color: dimgrey;
+    border: none;
 }
 /* END OF GLOBAL */
 
@@ -58,4 +82,33 @@ h1, h2, h3, h4 {
     font-weight: bold;
     font-family: Helvetica;
     text-transform: capitalize;
+}
+
+/* banner module */
+.banner {
+    background-image: url(../images/bank.jpg);
+    background-size: cover;
+    background-color: #fffde7;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-blend-mode: luminosity;
+}
+
+.banner__inner {
+    padding: 3em 0;
+    color: gold;
+    text-align: right;
+    font-size: 1.5em;
+    text-shadow: 1px 1px gold;
+}
+
+.banner__body {
+    background-color: #000;
+    padding: 1.5625em;
+    opacity: .6;
+}
+
+.banner__button {
+    display: inline-block;
+    margin-top: 1rem;
 }
