--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -171,3 +171,26 @@ form > * + * {
     }
 }
 
+/* list module */
+.list {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -1.5625em;
+}
+
+.list > * {
+    flex: 1 calc(50% - 1.5625em);
+    margin-top: 1.5625em;
+    margin-left: 1.5625em;
+}
+
+.list-item {
+    background-color: #fff;
+    border-radius: 0.3em;
+    padding: 1.5625em;
+    min-width: 200px;
+}
