--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -45,7 +45,8 @@ h1, h2, h3, h4 {
 
 .row-max-size {
     width: 80%;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media screen and (min-width: 1024px) {
@@ -82,6 +83,7 @@ h1, h2, h3, h4 {
 .header {
     background-color: #ffcf40;
     padding: 0.4em 0;
+    margin-bottom: 0;
 }
 
 .header__title {
@@ -220,4 +222,11 @@ form > * + * {
 .media > img {
     height: 3em;
     border-radius: 1.5em;
+}
+
+.footer {
+    background-color: #f0f2f4;
+    color: #878f97;
+    text-align: center;
+    padding: 1em 0;
 }
