--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -299,3 +299,28 @@ form > * + * {
         font-size: 1rem;
     }
 }
+
+.container {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    margin-left: -1.5625em;
+}
+
+.container > * {
+    margin-left: 1.5625em;
+    background-color: #fff;
+    padding: 1.5625em;
+}
+
+.aside {
+    flex-grow: 1;
+    flex-shrink: 3;
+}
+
+.main {
+    flex-grow: 3;
+    flex-shrink: 1;
+}
