Implement customer detail media in transaction details ui

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -246,6 +246,10 @@ form > * + * {
     margin-top: 1rem;
 }
 
+.media--start {
+    justify-content: flex-start;
+}
+
 .media > * + * {
     margin-left: 1em;
 }
