--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -250,6 +250,10 @@ form > * + * {
     justify-content: flex-start;
 }
 
+.media--end {
+    justify-content: flex-end;
+}
+
 .media > * + * {
     margin-left: 1em;
 }
