Implement trans details in transaction details ui

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -473,3 +473,25 @@ form > * + * {
 .account-trans > * {
     flex: 1;
 }
+
+.trans-details {
+    background-color: #fff8e1;
+    padding: 1.5625em;
+}
+
+.trans-details > * {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: center;
+}
+
+.trans-details > * > * + * {
+    margin-left: 1em;
+}
+
+.trans-details > * + * {
+    margin-top: 1.5625em;
+}
