--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -89,6 +89,11 @@ a:hover {
     color: dimgrey;
     border: none;
 }
+
+.button--full-width {
+    margin-top: 1.5625em;
+    width: 100%;
+}
 /* END OF GLOBAL */
 
 
